'Added translation to default page title'

--- a/modules/LPCandy/locale/ru_RU/lpcandy.po
+++ b/modules/LPCandy/locale/ru_RU/lpcandy.po
@@ -1,553 +1,15 @@
 msgid ""
 msgstr ""
-"X-Poedit-SearchPath-0:modules/LPCandy/lib"
-"X-Poedit-SearchPath-1:view/lpcandy"
-"X-Poedit-SearchPath-2:view/editor"
-"X-Poedit-SearchPath-3:lib/templater/server/api.php"
-
-#: 
-msgid "Tracking"
-msgstr "Заявки"
-
-#: 
-msgid "delete"
-msgstr "удалить"
-
-#: 
-msgid "Delete selected"
-msgstr "Удалить отмеченные"
-
-#: 
-msgid "#"
-msgstr "№"
-
-#: 
-msgid "page"
-msgstr "страница"
-
-#: 
-msgid "status"
-msgstr "статус"
-
-#: 
-msgid "date"
-msgstr "дата"
-
-#: 
-msgid "ip"
-msgstr "ip"
-
-#: 
-msgid "data"
-msgstr "данные"
-
-#: 
-msgid "yes"
-msgstr "да"
-
-#: 
-msgid "no"
-msgstr "нет"
+"X-Poedit-SearchPath-0:modules/LPCandy"
+"X-Poedit-SearchPath-1:config.php"
 
 #: 
 msgid "LPCandy"
 msgstr "LPCandy"
 
 #: 
-msgid "LPCandy: you have a new form submission {id}"
-msgstr "LPCandy: у вас есть новая заявка №{id}"
-
-#: 
-msgid "Login"
-msgstr "Логин"
-
-#: 
-msgid "Please, enter your invite code"
-msgstr "Пожалуйста введите Ваш код-приглашение"
-
-#: 
-msgid "Wrong invite code"
-msgstr "Неправильный код-приглашение"
-
-#: 
-msgid "Register"
-msgstr "Регистрация"
-
-#: 
-msgid "Enter your invite"
-msgstr "Введите Ваш код-приглашение"
-
-#: 
-msgid "Email (for notification of order)"
-msgstr "Email"
-
-#: 
-msgid "Save"
-msgstr "Сохранить"
-
-#: 
-msgid "Settings profile"
-msgstr "Настройки профиля"
-
-#: 
-msgid "User list"
-msgstr "Список клиентов"
-
-#: 
-msgid "login as user"
-msgstr "войти как"
-
-#: 
-msgid "name"
-msgstr "имя"
-
-#: 
-msgid "login"
-msgstr "логин"
-
-#: 
-msgid "Invites list"
-msgstr "Список приглашений"
-
-#: 
-msgid "Add one invite"
-msgstr "Добавить одно приглашение"
-
-#: 
-msgid "Add Invites"
-msgstr "Добавить приглашения"
-
-#: 
-msgid "Invite code"
-msgstr "Приглашение (код)"
-
-#: 
-msgid "User"
-msgstr "Пользователь"
-
-#: 
-msgid "-"
-msgstr "-"
-
-#: 
-msgid "Invite count"
-msgstr "Количество приглашений"
-
-#: 
-msgid "Add invites"
-msgstr "Добавить приглашения"
-
-#: 
-msgid "Back to invite list"
-msgstr "Вернуться к списку приглашений"
-
-#: 
-msgid "Pages"
-msgstr "Страницы"
-
-#: 
-msgid "Create New Landing Page"
-msgstr "Создать новую страницу"
-
-#: 
-msgid "Domain is already in use"
-msgstr "Извините, но данный домен уже занят"
-
-#: 
-msgid "Start from scratch"
-msgstr "Начать с нуля"
-
-#: 
-msgid "Title"
-msgstr "Заголовок"
-
-#: 
-msgid "Domain"
-msgstr "Домен"
-
-#: 
-msgid "Template"
-msgstr "Шаблон"
-
-#: 
-msgid "Create page"
-msgstr "Создать страницу"
-
-#: 
-msgid "Path (Example: /link)"
-msgstr "Путь (Пример: /link)"
-
-#: 
-msgid "Domain (bind your domain to our server IP:"
-msgstr "Домен (привяжите Ваш домен к нашему IP:"
-
-#: 
-msgid "Meta-tag “robots” content"
-msgstr "Содержание мета-тега “robots”"
-
-#: 
-msgid "Meta-tag “keywords” content"
-msgstr "Содержание мета-тега “keywords”(ключевые слова)"
-
-#: 
-msgid "Meta-tag “description” content"
-msgstr "Содержание мета-тега “description”(описание сайта)"
-
-#: 
-msgid "Extra html <b>JavaScript</b> code (example: online consultant)"
-msgstr "Extra html <b>JavaScript</b> (пример: онлайн консультант)"
-
-#: 
-msgid "<b>JavaScript</b> call when form submit (example: google analytics or metrika yandex)"
-msgstr "<b>JavaScript</b> вызываемый при отправке формы (пример: google аналитика или yandex метрика)"
-
-#: 
-msgid "Responsive page design"
-msgstr "Отзывчивый дизайн страницы"
-
-#: 
-msgid "Save child page"
-msgstr "Сохранить дочернюю страницу"
-
-#: 
-msgid "Edit child page"
-msgstr "Редактировать дочернюю страницу"
-
-#: 
-msgid "Save page"
-msgstr "Сохранить страницу"
-
-#: 
-msgid "Edit page"
-msgstr "Изменить страницу"
-
-#: 
-msgid "My first page"
-msgstr "Моя первая страница"
-
-#: 
-msgid "Design page"
-msgstr "Дизайнер страницы"
-
-#: 
-msgid "Minify js/css"
-msgstr "Сжать js/css"
-
-#: 
 msgid "Customers"
 msgstr "Клиенты"
-
-#: 
-msgid "Invites"
-msgstr "Приглашения"
-
-#: 
-#~ msgid "Projects"
-#~ msgstr "Проекты"
-
-#: 
-#~ msgid "title"
-#~ msgstr "заголовок"
-
-#: 
-#~ msgid "Edit project"
-#~ msgstr "Редактировать проект"
-
-#: 
-#~ msgid "Create New Project"
-#~ msgstr "Создать новый проект"
-
-#: 
-#~ msgid "Thumbnail"
-#~ msgstr "Миниатюра"
-
-#: 
-#~ msgid "Excerpt"
-#~ msgstr "Кратко"
-
-#: 
-#~ msgid "Content"
-#~ msgstr "Содержание"
-
-#: 
-#~ msgid "Save project"
-#~ msgstr "Сохранить проект"
-
-#: 
-msgid "Templater editor"
-msgstr "Редактор страниц"
-
-#: 
-msgid "Browse"
-msgstr "Выбрать"
-
-#: 
-msgid "Profile"
-msgstr "Профиль"
-
-#: 
-msgid "You can get an account on this site, if you have an account in the popular social networks or services. Select the authentication method below. If you already went this way on this site, you already have an account."
-msgstr "Вы можете получить учетную запись на этом сайте, если у вас есть учетная запись в популярных социальных сетях или сервисах. Выберите способ авторизации ниже. Если вы уже заходили подобным образом на этом сайте, то                     у вас уже есть учетная запись."
-
-#: 
-msgid "LPCandy is developed by <span>BeeJee</span>"
-msgstr "Конструктор разработан компанией <span>BeeJee</span>"
-
-#: 
-msgid "<span>BeeJee</span> is looking for mind-blowing project"
-msgstr "<span>BeeJee</span> = IT-фундамент Вашего бизнеса"
-
-#: 
-msgid "Logged as"
-msgstr "Вы вошли как"
-
-#: 
-msgid "Logout"
-msgstr "Выйти"
-
-#: 
-msgid "You have a new form track"
-msgstr "У вас есть новая заявка с формы посадочной страницы"
-
-#: 
-msgid "Goto track list"
-msgstr "Перейти к списку заявок"
-
-#: 
-msgid "No data"
-msgstr "Нет данных"
-
-#: 
-msgid "en"
-msgstr "ru"
-
-#: 
-msgid "(page preview)"
-msgstr "(просмотр)"
-
-#: 
-msgid "No domain assigned"
-msgstr "Домен не присвоен"
-
-#: 
-msgid "+ add child page"
-msgstr "+ добавить дочернюю страницу"
-
-#: 
-msgid "Launch Designer"
-msgstr "Запустить конструктор"
-
-#: 
-msgid "Edit"
-msgstr "Редактировать"
-
-#: 
-msgid "Delete"
-msgstr "Удалить"
-
-#: 
-msgid "No pathname assigned"
-msgstr "Путь не определён"
-
-#: 
-msgid "No pages yet"
-msgstr "Страниц пока нет"
-
-#: 
-#~ msgid "Designer developed by <span>BeeJee</span><br><span>BeeJee</span> = IT-the foundation of your business"
-#~ msgstr "Конструктор разработан компанией <span>BeeJee</span><br><span>BeeJee</span> = IT-фундамент Вашего бизнеса"
-
-#: 
-#~ msgid "Проекты"
-#~ msgstr "Projects"
-
-#: 
-#~ msgid "Проекты из бд"
-#~ msgstr "Projects from DB"
-
-#: 
-#~ msgid "Read full case"
-#~ msgstr "Читать полный кейс"
-
-#: 
-#~ msgid "Work result"
-#~ msgstr "Результат работы"
-
-#: 
-#~ msgid "Subtitle"
-#~ msgstr "Подзаголовок"
-
-#: 
-#~ msgid "Результат работы"
-#~ msgstr ""
-
-#: 
-#~ msgid "Подзаголовок"
-#~ msgstr ""
-
-#: 
-#~ msgid "Powered by Bingo and TeaCss"
-#~ msgstr "Создано с помощью Bingo и TeaCss"
-
-#: 
-#~ msgid "Domain (our ip:"
-#~ msgstr "Домен (наш ip:"
-
-#: 
-#~ msgid "this JavaScript call when form submit (example: google analytics or metrika yandex)"
-#~ msgstr ""
-
-#: 
-#~ msgid "Extra html(<b>JavaScript</b>) code"
-#~ msgstr "Подключаемый html(JavaScript) код"
-
-#: 
-#~ msgid "this JavaScript run with form submit"
-#~ msgstr "этот JavaScript исполняется при отправке формы"
-
-#: 
-#~ msgid "JavaScript"
-#~ msgstr "Javascript"
-
-#: 
-#~ msgid "Email (for notification)"
-#~ msgstr "Email (для уведомлений о заказе)"
-
-#: 
-#~ msgid "Common"
-#~ msgstr ""
-
-#: 
-#~ msgid "checked"
-#~ msgstr "отмечен"
-
-#: 
-#~ msgid "unchecked"
-#~ msgstr "не отмечен"
-
-#: 
-#~ msgid "Invite"
-#~ msgstr "Приглашение"
-
-#: 
-#~ msgid "'Invite' is already in use"
-#~ msgstr "'Приглашение' уже использовано"
-
-#: 
-#~ msgid "visitors"
-#~ msgstr "посетители"
-
-#: 
-#~ msgid "new visitors"
-#~ msgstr "новые"
-
-#: 
-#~ msgid "order"
-#~ msgstr "заявки"
-
-#: 
-#~ msgid "conversion"
-#~ msgstr "конверсия"
-
-#: 
-#~ msgid "Statistic"
-#~ msgstr "Статистика"
-
-#: 
-#~ msgid "Content META-tag “robots”"
-#~ msgstr "Содержание META-тега “robots”"
-
-#: 
-#~ msgid "Content META-tag “keywords”"
-#~ msgstr "Содержание META-тега “keywords”(ключевые слова)"
-
-#: 
-#~ msgid "Content META-tag “description”"
-#~ msgstr "Содержание META-тега “description”(описание сайта)"
-
-#: 
-#~ msgid "extraHTML(JavaScript) code"
-#~ msgstr "Подключаемый HTML(JavaScript) код"
-
-#: 
-#~ msgid "extraHTML code"
-#~ msgstr "Подключаемый HTML код"
-
-#: 
-#~ msgid "Plug JavaScript code"
-#~ msgstr "Подключаемый JavaScript код"
-
-#: 
-#~ msgid "Content META-tag “Robots”"
-#~ msgstr "Содержание атрибута contant мета-тега “Robots”"
-
-#: 
-#~ msgid "META-tag “Robots” (for web robots)"
-#~ msgstr ""
-
-#: 
-#~ msgid "Meta-tag “Robots” (for web robots)"
-#~ msgstr "META-тег “Robots” (для поисковых роботов)"
-
-#: 
-#~ msgid "Robots.txt (for web robots)"
-#~ msgstr "Robots.txt (файл для поисковых роботов)"
-
-#: 
-#~ msgid "Page list"
-#~ msgstr "Список страниц"
-
-#: 
-#~ msgid "Create a new page"
-#~ msgstr "Создать новую страницу"
-
-#: 
-#~ msgid "No template selected"
-#~ msgstr "Шаблон не выбран"
-
-#: 
-#~ msgid "No domain"
-#~ msgstr "Нет домена"
-
-#: 
-#~ msgid "design"
-#~ msgstr "дизайн"
-
-#: 
-#~ msgid "edit"
-#~ msgstr "редактировать"
-
-#: 
-#~ msgid "There are no pages"
-#~ msgstr "Страниц нет"
-
-#: 
-#~ msgid "Create a new page?"
-#~ msgstr "Создать новую страницу?"
-
-#: 
-#~ msgid "Template list"
-#~ msgstr "Список шаблонов"
-
-#: 
-#~ msgid "Name"
-#~ msgstr "Название"
-
-#: 
-#~ msgid "page title"
-#~ msgstr "имя страницы"
-
-#: 
-#~ msgid "Track"
-#~ msgstr "Заявка"
-
-#: 
-#~ msgid "Advertising"
-#~ msgstr "Реклама"
-
-#: 
-#~ msgid "№"
-#~ msgstr ""
 
 #: 
 msgid "File is invalid"
@@ -568,3 +30,31 @@ msgstr "Файл не был загружен"
 #: 
 msgid "Upload error. Try again later"
 msgstr "Ошибка загрузки. Попробуйте повторить загрузку позже"
+
+#: 
+msgid "User list"
+msgstr "Список клиентов"
+
+#: 
+msgid "login as user"
+msgstr "войти как"
+
+#: 
+msgid "#"
+msgstr "№"
+
+#: 
+msgid "name"
+msgstr "имя"
+
+#: 
+msgid "login"
+msgstr "Логин"
+
+#: 
+msgid "Domain is already in use"
+msgstr "Извините, но данный домен уже занят"
+
+#: 
+msgid "Sample page"
+msgstr "Страница-пример"
